# hodhr-engine

./: CMakeLists.txt  Makefile  README  README.md  behavior.cpp  behavior.h  camera.h  component.cpp  component.h  debug.cpp  debug.h  display.h  gameobject.cpp  gameobject.h  glwidget.cpp  glwidget.h  graphics.cpp  graphics.h  hodhrsuite.pro  material.h  mesh.h  meshrenderer.cpp  meshrenderer.h  object.h  rect.cpp  rect.h  renderbuffer.cpp  renderbuffer.h  renderer.cpp  renderer.h  rendertexture.cpp  rendertexture.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
editor/: editor.pro  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_glwidget.cpp  moc_mainwindow.cpp  moc_window.cpp  qtdebugconsole.cpp  qtdebugconsole.h  window.cpp  window.h
game/: CMakeLists.txt  game.cpp  game.h  game.pro  main.cpp
hodhrengine/: CMakeLists.txt  behavior.cpp  behavior.h  behavior.hpp  camera.cpp  camera.h  camera.hpp  color.cpp  color.h  color.hpp  commandbuffer.cpp  commandbuffer.h  common.h  component.cpp  component.h  component.hpp  consoledebug.cpp  consoledebug.h  consoledebug.hpp  debug.cpp  debug.h  debug.hpp  display.cpp  display.h  display.hpp  gameobject.cpp  gameobject.h  gameobject.hpp  graphics.cpp  graphics.h  graphics.hpp  hodhr.h  hodhr.hpp  hodhrengine.pro  light.cpp  light.h  light.hpp  material.cpp  material.h  material.hpp  (+44 more)
resources/images/: cube2.dds  stone.dds  torusdiffuse.dds
resources/models/: cube.blend  cube.blend1  cube.mtl  torus.mtl
resources/shaders/: basic.sdr  phong.sdr
